kube/fask_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fask-namespace
  labels:
     component: fask-namespace
