kube/fask_nginx_objects.yml
# To build nginx pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fask-nginx-deployment
  namespace: fask-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      restartPolicy: Always            
      containers:
        - name: fask-nginx-container
          image: jehaddocker82/fask-nginx:v2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: fask-mountv
              mountPath: /usr/share/nginx
      volumes:
          - name: fask-mountv
            persistentVolumeClaim:
                claimName: fask-nginx-pvc              

---
# To build nginx cluster service
apiVersion: v1
kind: Service
metadata:
  name: fask-nginx-service
  namespace: fask-namespace  
spec:
  type: ClusterIP
  selector:
    component: nginx
  ports:
    - port: 80
      targetPort: 80
